# Mahaguru-AI-v1

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  Dockerfile.test  Makefile  README.md  alembic.ini  docker-compose.test.yml  openapi.yaml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240827_add_pgvector_extension.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai.py  auth.py  documents.py  health.py  users.py
backend/app/core/: background_tasks.py  config.py  logging_config.py  metrics.py  rate_limiter.py  security.py
backend/app/crud/: base.py  crud_document.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/models/: base.py  document.py  document_chunk.py  user.py
backend/app/schemas/: document.py  health.py  token.py  user.py
backend/app/services/: chunking_service.py  embedding_service.py
backend/app/utils/: document_processor.py  embeddings.py  file_utils.py
backend/perf/: README.md  search_test.js
backend/scripts/: init_db.py  test.sh
backend/tests/: conftest.py  test_auth.py  test_users.py  utils.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/home/: HeroSection.tsx  TrainingGrounds.tsx
frontend/src/components/layout/: Footer.tsx  LeftRail.tsx  Navbar.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/classroom/: ClassroomPage.tsx
frontend/src/services/: api.ts  classroom.ts
